--- a/ion-library/src/app/home/home.page.html
+++ b/ion-library/src/app/home/home.page.html
@@ -3,6 +3,12 @@
     <ion-title>
       Бібліотека
     </ion-title>
+    <ion-buttons slot="secondary">
+      ({{userName}})
+      <ion-button routerLink="/login" routerDirection="root">
+        <ion-icon slot="icon-only" name="log-out"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
